# thesis

./: .gitignore  .gitmodules  README.md  abstract.tex  ack.tex  announcement.tex  appendix.tex  applications.tex  conclusion.tex  cws-thesis.tex  inmem.tex  intro.tex  latexmkrc.linux  latexmkrc.osx  latexmkrc.refs.linux  parma.tex  rpibib.tex  thesis.cls  title-phd.tex  workflows.tex
applications/: hpcny.tex
applications/figures/: fig2a.eps  fig2b.eps  fig2c.eps  fig2d.eps  fig2e.eps  fig2f.eps  phastaGatewayOrg.eps
imp/: impAlbany.tex  impAlbanySolderball.tex  impAppendix.tex  impCompInteractions.tex  impCompInterfaces.tex  impDataStreams.tex  impIntro.tex  impOmega3p.tex  impPhasta.tex  impPhastaDambreak.tex  impPhastaPerformance.tex
imp/code/: CMakeLists.txt  README.md  rdtsc.c  rdtsc.h  stream.c  stream_simple.c
imp/code/iostream/: ss.cc
parmaimprovement/: parmaBackground.tex  parmaContributions.tex  parmaDiffusive.tex  parmaGeometric.tex  parmaGraph.tex  parmaPtnimp.tex  parmaPtnmesh.tex  parmaRequirements.tex  parmaResults.tex  parmaSelection.tex  parmaSummaryThesis.tex  parmaTargets.tex
parmaimprovement/figs/: cavities.eps  distMeshAndPtnMdl.eps  localVsGlobalZhou.eps
presentation/: latexmkrc.linux  latexmkrc.osx  openSkim.sh  presentation.tex  updateSkim.sh
presentation/animations/: AdaptiveTwoPhaseFlow.mov  ocean60km.mov  twoPhase_complete.mov  upright_p0.mov
scripts/: do_gitlatexdiff.sh  getActiveRefs.sh  grammerCheck.sh  makeLatexFromActiveRefs.py
workflows/: wrkflwComponents.tex  wrkflwImpediments.tex  wrkflwIntro.tex
(+54 files in other folders)
