cmake_minimum_required(VERSION 2.8.11)
project(stream)
add_executable(stream rdtsc.c stream.c)
add_executable(stream_simple stream_simple.c)
math(EXPR start '10*1000*1000')
math(EXPR step '10*1000*1000')
math(EXPR stop '100*1000*1000')
foreach(sz RANGE ${start} ${stop} ${step})
  message("${sz}")
  execute_process(COMMAND fallocate -l ${sz} /tmp/${sz}.dat)
endforeach()
